Random hero's id for user during registration. Heroes list command test coverage.
