# routes/api.php
@@ -14,20 +14,12 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::post( '/register', \App\Http\Controllers\Auth\RegisterController::class );
-Route::post( '/login', \App\Http\Controllers\Auth\LoginController::class );
+Route::post( '/register', \App\Http\Controllers\Auth\RegisterController::class )->name('register');
+Route::post( '/login', \App\Http\Controllers\Auth\LoginController::class )->name('login');
 
 Route::middleware( 'auth:api' )->group( function () {
-    Route::put( '/user/profile', \App\Http\Controllers\Auth\ProfileController::class );
+    Route::put( '/user/profile', \App\Http\Controllers\Auth\ProfileController::class )->name('profile');
 
     Route::resource('/planets', \App\Http\Controllers\Api\PlanetController::class )->only('index', 'show');
     Route::resource('/films', \App\Http\Controllers\Api\FilmController::class )->only('index', 'show');
-
-//    Route::get( '/films', function () {
-//        return response()->json( [ 'message' => 'test' ], 200 );
-//    } );
 } );
-
-//Route::middleware('auth:api')->get('/user', function (Request $request) {
-//    return $request->user();
-//});
